draw fractal tree

--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
 
 <body>
     <!-- <main id='main'></main> -->
+        <div class="start-modal">
+            <div class="start-modal-content">
+                <div id='close'>+</div>
+                <h2>Welcome To My Game!</h2>
+                <h3>Instructions</h3>
+                <ol class="Instructions">
+                    <li>Use mouse or trackpad to control the canon</li>
+                    <div>Note: the closer to the canon, the faster the balls</div>
+                    <li>Use the space bar to fire</li>
+                    <li>Fire all the targets and get your prize</li>
+                </ol>
+                <button id="start">Let's Start!</button>
+            </div>
+
+            <div class="end-modal-content">
+                <div id='close'>+</div>
+                <a id='git-url' href="">
+                    <button id="apply">Apply Here</button>
+                </a>
+            </div>
+        </div>
+        
+        <div id="instructions">
+
+            <div>Instructions</div>
+            <div>^</div>     
+        </div>
+
+
     <canvas></canvas>
-    <img src="" alt="">
+
     <script type="text/javascript" src="bundle.js"></script>
 
 </body>
