--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
                 <h3>Rules</h3>
                 <ol class='Rules'>
                     <div>Shoot the all moving targets with the canon and win a special prize!</div>
+                    <div class='simple'>It's seriously this simple!</div>
                 </ol>
                 <h3>Instructions</h3>
                 <ol class="Instructions">
                     <li>Use mouse or trackpad to control the canon</li>
-                    <li>Use the space bar to fire</li>
+                    <li>Use the space bar to fire <span class='space-bar'>[</span></li>
                     <li>Fire all the targets and get your prize</li>
                 </ol>
-                <button id="start">Let's Git Started!</button>
+                <button id="start">Click to Start!</button>
                 <div class='info'>If at anytime you forget these instructions, click on the tab on the bottom left corner.</div>
             </div>
         </div>
@@ -47,16 +48,18 @@
                 <h3>Location</h3>
                 <div id='job-location'></div>
                 <a id='job-url' href="">
-                    <button id="apply">Apply Here</button>
+                    <button id="apply">Let's Git A Job!</button>
                 </a>
             </div>
         </div>
 
 
     <canvas id = 'main-canvas'></canvas>
-    <div id="treediv-holder">
-        <div id='treediv'></div>
+
+    <div id='treediv'>
+        <span title="I am hovering over the text"></span>
     </div>
+
 
     <script type="text/javascript" src="bundle.js"></script>
 
