--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <h2>Welcome!</h2>
                 <h3>Rules</h3>
                 <ol class='Rules'>
-                    <div>Shoot the all moving targets with the canon and win a special prize!</div>
+                    <div>Shoot all the moving targets with the canon and win a special prize!</div>
                     <div class='simple'>It's seriously this simple!</div>
                 </ol>
                 <h3>Instructions</h3>
                 <ol class="Instructions">
                     <li>Use mouse or trackpad to control the canon</li>
-                    <li>Use the space bar to fire <span class='space-bar'>[</span></li>
+                    <li>Use a mouse click or the space bar to fire <span class='space-bar'>[</span></li>
                     <li>Fire all the targets and get your prize</li>
                 </ol>
                 <button id="start">Click to Start!</button>
@@ -48,6 +48,7 @@
                 <h3>Location</h3>
                 <div id='job-location'></div>
                 <a id='job-url' href="">
+                     <!-- Let's Git A Job! -->
                     <button id="apply">Let's Git A Job!</button>
                 </a>
             </div>
